# calcio-platform

./: .dockerignore  .env.example  .gitignore  README.md  REMOVED_FROM_VERSIONING.txt  SPRINT15_TOUCHED_FILES.txt  TOUCHED_FILES.txt  docker-compose.yml  run_feature_snapshots.py
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260414_0001_create_app_metadata.py  20260414_0002_create_football_domain.py  20260414_0003_extend_core_schema_sprint5.py  20260414_0004_raw_ingestion_real_tracking.py  20260414_0005_sprint7_normalization_mapping.py  20260415_0006_sprint10_odds_append_only.py  20260415_0007_sprint11_feature_snapshots.py  20260415_0008_sprint12_predictions_mvp.py  20260415_0009_sprint14_evaluation_backtest_mvp.py  20260415_0010_sprint15_hardening_indexes.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  error_handlers.py  logging.py  request_context.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  bookmaker.py  competition.py  competition_season.py  evaluation_metric.py  evaluation_run.py  feature_snapshot.py  ingestion_run.py  market.py  match.py  meta.py  model_registry.py  model_version.py  (+9 more)
apps/api/sql/: sprint18_backfill_prediction_selections.sql  sprint18_verify_metrics.sql
apps/api/tests/: conftest.py  test_api_hardening.py  test_audit_fix_pack.py  test_evaluation_metrics.py  test_evaluation_service.py  test_feature_engineering_service.py  test_match_report_service.py  test_pipeline_idempotency.py  test_prediction_service.py
(+193 files in other folders)
